<resources>
    <string name="app_name">UnitTestSample</string>

    <string name="application">Robolectric</string>
    <string name="menu_item_2">Second menu item</string>
    <string name="menu_item_1">First menu item</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_incorrect_login">Password/Email is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_simple">SimpleActivity</string>
    <string name="sample_demo">官方demo</string>
    <string name="sample_lifecycle_label">当前触发的生命周期为：</string>
    <string name="sample_lifecycle_oncreate">onCreate</string>
    <string name="sample_lifecycle_onResume">onResume</string>
    <string name="sample_lifecycle_onDestroy">onDestroy</string>
    <string name="sample_forward">Activity跳转</string>
    <string name="sample_dialog">Dialog测试</string>
    <string name="sample_toast">Toast测试</string>
    <string name="sample_state">控件状态测试</string>
    <string name="sample_checkbox">点击按钮反选</string>
    <string name="sample_dialog_message">消息内容</string>
    <string name="sample_dialog_title">标题</string>

    <string name="sample_fragment">fragment区域</string>
    <string name="title_activity_callback">CallbackActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="hello_toast_test">Hello espresso</string>
</resources>